# hextile

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: Cargo.toml  gen_tri_fn.rs  line_draw_fn.rs
src/: lib.rs  rasterization.rs  types.rs
src/api/: gen_draw_fn_tests.rs  mod.rs
src/api/tests/: gen_draw_fn.rs  line_draw_fn.rs  mod.rs
src/rasterization/: mod.rs
src/rasterization/tests/: mod.rs
src/types/: axis_offset_tests.rs  grid_line_tests.rs  line_tests.rs  mod.rs  point_tests.rs
src/types/tests/: line.rs  mod.rs
