[package]
name = "hextile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
num-traits = "0.2"

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[[bench]]
name = "gen_tri_fn"
harness = false