[package]
name = "hextile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
num-traits = "0.2"
contracts = "0.6"

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.3", features = ["real_blackbox"]}


# Workaround for criterion
#serde_derive = "*"

[[bench]]
name = "line_draw_fn"
harness = false